minikube/resources/namespace-devops.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
  labels:
    name: devops
