minikube/resources/service-jenkins-devops.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-devops
  labels:
    app: jenkins-devops
  namespace: devops
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: jenkins-devops
  type: NodePort
