minikube/resources/ingress-devops.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-ingress
  labels:
    name: devops-ingress
  namespace: devops
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: jenkins-devops
          servicePort: 8080
